--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="particles">
   <div id="intro">
-    <a href="Saurabh's Resume (5).pdf" style="color: whitesmoke; text-decoration: none;"><h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Hi there!<img style="color: white" src="assets/resume_icon.png" height="35" width="35"></a></h2>
+    <a href="Saurabh's Resume.pdf" style="color: whitesmoke; text-decoration: none;"><h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Hi there!<img style="color: white" src="assets/resume_icon.png" height="35" width="35"></a></h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/saurabh-pethani/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
